--- a/src/styles/sass/partials/components/_HomePage.scss
+++ b/src/styles/sass/partials/components/_HomePage.scss
@@ -1,6 +1,7 @@
 .home-page {
 	background-color: $clr-black;
 	text-align: center;
+	min-height: 100vh;
 
 	img {
 		height: 400px;
