--- a/src/styles/sass/partials/components/_QuestionsPage.scss
+++ b/src/styles/sass/partials/components/_QuestionsPage.scss
@@ -2,6 +2,7 @@
 	background-color: $clr-black;
 	text-align: center;
 	color: $clr-white;
+	min-height: 100vh;
 
 	img {
 		width: 30%;
@@ -38,7 +39,7 @@
 	nav {
 		text-align: left;
 		padding-top: 20px;
-		
+
 		a {
 			font-size: $fs-600;
 			color: $clr-white;
